added asstes folder with img and logo

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Hack For Western Mass
 description: A short description of your site's purpose
+logo: assets/img/h4wm.png
