--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Hack For Western Mass
-description: A short description of your site's purpose
+description: Local folks solving local problems
 logo: assets/img/h4wm.png
