--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Hack For Western Mass
-description: Local folks solving local problems
+description: Think Globally, Hack Locally
 logo: assets/img/h4wm.png
